# src/api/controllers/UserController.ts
@@ -6,6 +6,7 @@ import ResponseHandler from "../../handlers/ResponseHandler";
 import { ResponseStatus } from "../enums/ResponseStatus";
 import IResponse from "../interfaces/IResponse";
 import CreateUserRequest from "../requests/payloads/CreateUserRequest";
+import UserLoginRequest from "../requests/payloads/UserLoginRequest";
 
 @JsonController("/user")
 export default class UserController {
@@ -21,6 +22,21 @@ export default class UserController {
         @Body({ required: true, validate: true, type: CreateUserRequest }) payload: CreateUserRequest
     ): Promise<IResponse> {
         const response = await this.userService.createUser(payload);
+        return ResponseHandler.returnResponse(response);
+    }
+
+    @OpenAPI({ summary: "User Login" })
+    @Post("/login")
+    public async login(
+        @Body({
+            required: true,
+            validate: true,
+            type: UserLoginRequest
+        }) payload: UserLoginRequest
+    ): Promise<IResponse> {
+        const { email, password } = payload;
+
+        const response = await this.userService.login(email, password);
         return ResponseHandler.returnResponse(response);
     }
 }
