# src/api/services/UserService.ts
@@ -7,6 +7,7 @@ import { UserRepository } from "../repositories/UserRepository";
 import CreateUserRequest from "../requests/payloads/CreateUserRequest";
 import { ServiceResponse } from "../responses";
 
+import AuthenticationService from "./AuthenticationService";
 import BaseService from "./BaseService";
 import UtilityService from "./UtilityService";
 
@@ -15,6 +16,7 @@ import UtilityService from "./UtilityService";
 export default class UserService extends BaseService {
     constructor(
         private log: Logger,
+        private authenticationService: AuthenticationService,
     ) {
         super();
     }
@@ -40,6 +42,30 @@ export default class UserService extends BaseService {
         } catch (err) {
             this.log.error("Could not register user", { err });
             return ServiceResponse.error(`Could not register user: ${err}`);
+        }
+    }
+
+    public async login(email:string, password:string) : Promise<ServiceResponse> {
+        try {
+            const user = await UserRepository.findByEmail(email);
+            if(!user) {
+                return ServiceResponse.error("Invalid email address or password", ResponseStatus.UNAUTHORIZED);
+            }
+
+            const userPassword = user.password;
+            const isSame = await UtilityService.comparePassword(password, userPassword);
+            if(!isSame) {
+                return ServiceResponse.error("Invalid email addresses or password", ResponseStatus.UNAUTHORIZED);
+            }
+
+            delete user.password;
+
+            const token = this.authenticationService.issueToken(user);
+
+            return ServiceResponse.success("User login successful", { user, token });
+        } catch (err) {
+            this.log.error("Could not login at this time", { err });
+            return ServiceResponse.error(`Could not login at this time: ${err}`);
         }
     }
 }
