# src/api/swagger.json
@@ -28,6 +28,22 @@
 					"lastName",
 					"phoneNumber"
 				]
+			},
+			"UserLoginRequest": {
+				"properties": {
+					"email": {
+						"format": "email",
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"required": [
+					"email",
+					"password"
+				]
 			}
 		},
 		"securitySchemes": {
@@ -67,6 +83,34 @@
 					}
 				},
 				"summary": "User Registration",
+				"tags": [
+					"User"
+				]
+			}
+		},
+		"/user/login": {
+			"post": {
+				"operationId": "UserController.login",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserLoginRequest"
+							}
+						}
+					},
+					"description": "UserLoginRequest",
+					"required": true
+				},
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {}
+						},
+						"description": "Successful response"
+					}
+				},
+				"summary": "User Login",
 				"tags": [
 					"User"
 				]
